# terminal_game

./: .gitignore  README.md  set_env.sh
Docs/: Color.md  ansi_terminal_cheatsheet.md  ncurses_api_note.md  utf8test  代码规范
Snake/: CMakeLists.txt
Snake/config/: config.json  config.md
Snake/src/: color.cpp  color.hpp  frame.cpp  frame.hpp  game.cpp  game.hpp  main.cpp  snake_game.cpp  snake_game.hpp  terminal_game.cpp  terminal_game.hpp
Snake/src/collision/: collision.cpp  collision.hpp
Snake/src/color/: color_system.cpp  color_system.hpp
Snake/src/debug/: debug.hpp
Snake/src/objects/: background.hpp  food.cpp  food.hpp  object.cpp  object.hpp  scoreboard.cpp  scoreboard.hpp  snake.cpp  snake.hpp  world.cpp  world.hpp
Tetris/: CMakeLists.txt
Tetris/src/: add_color.cpp  colortest.cpp  colortest2.cpp  colortest3.cpp  console_codes.cpp  dbg_no_refresh.cpp  main.cpp  show_colors.cpp  square.cpp  tetris.h  utf8.cpp  utf8test  windowtest.cpp
